--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,11 @@ body {
     background-color: #EFA447;
     background-image: url("../images/accommodation.jpg");
 }
-.home1 {
+.align {
   border-left: 8px solid blue;
   margin-left: 100px;
+}
+img{
+  max-width: 350px;
+  max-height: 350px;
 }
